--- a/firebase.json
+++ b/firebase.json
@@ -20,16 +20,28 @@
         "destination": "/MenDenimJacket/**"
       },
       {
+        "source": "/static/**",
+        "destination": "/static/**"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
     ],
-    "headers": [{
-      "source": "/**/*.@(jpg|jpeg|gif|png)",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=7200"
-      }]
-    }]
+    "headers": [
+      {
+        "source": "/**/*.@(jpg|jpeg|gif|png|webp|svg)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          },
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ]
   }
 }
