--- a/firebase.json
+++ b/firebase.json
@@ -31,11 +31,11 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=604800"  // 1 week for videos
+            "value": "public, max-age=604800"
           },
           {
             "key": "Accept-Ranges",
-            "value": "bytes"  // Enable video streaming
+            "value": "bytes"
           }
         ]
       }
